-Added Death explosions
	-Different equations that makes your death awesome
-Added original soundtrack!
	-New menu song "Flying Carrots 2"
	-New survival and adventure song "Limitless"
-Added basic controller support!
	-You can, in game, move Psycho and shoot with the analog sticks
	-Any other button triggers Ultrablast
	-However you can't move around the menu or pause...
-Added SplashScreen for Marvellous Soft
-Added new death messages
-Changes on the balance of the game
-Some bug fixes
-Removed previous soundtrack
-Removed menu random messages
*************************************************
(16/06/2013) Version 0.9.1    -  Long way to go
*************************************************

-Changes on Changelog
-Changes on suPerbALLs
	- They are spawned every 30 seconds
	- For every 90 seconds on survivor mode, their on-screen limit increases by 1

*************************************************
(16/06/2013) Version 0.9.0    -  PsyChO Reborn
*************************************************

-Change on the script
	-More "understandable" code!
	-Support for images
-Added a menu
	-Buttons
	-Transition between screens
	-New screen for Controls
	-Regular mode is now Survivor
	-From pause or death screen you can go back to menu
	-New menu song "The Synergy vs N.V.R. - Re-Control"
-Added random menu messages
-Added random pause messages
-Added new death messages
	-Added a very rare death message
-Added new type of enemy: suPerbALLs
-Added new easter-eggs
	-Added David Robert Jones mode
	-Added Italian mode
	-Added Richard mode
	-Added Detective mode
	-Added TILT mode
	-Added DK mode
	-Added The Code
-New file that saves your configurations
	-Saves your last sound control setting when the game is closed
-Changes on how files are created/read
-You can reset your stats in the main menu
-You can only use easter-eggs and devmode on survivor for now 
-Major changes on difficulty of Survivor mode
-Changes on text placement
	-New font for some texts
-Changes on focus