@@ -108,7 +108,7 @@ function run()
 				text = "Part Completed. Press ESC or P and return to the menu.", --ou algum outro texto
 				font = getCoolFont(50),
 				printmethod = graphics.printf,
-				position = vector:new{width/2 - 400, height/2 - 50},
+				position = vector:new{width/2 - 400, height/2 +20},
 				limit = 800,
 				align = 'center'
 			}:register()
