@@ -24,6 +24,8 @@ THE HISTORY OF PSYCHOBALL
 	-You can, in game, move Psycho and shoot with the analog sticks
 	-Any other button triggers Ultrablast
 	-However you can't move around the menu or pause...
+-Added ConCenTRatE mode
+	-Hold shift to move slowly
 -Added SplashScreen for Marvellous Soft
 -Added new death messages
 -Changes on the balance of the game
